# sdl-static-link-on-windows

./: CMakeLists.txt  README.md
src/: main.cpp
